fix spacing on lines

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -286,11 +286,14 @@ tbody tr:nth-child(odd) th {
  */
 
 .container {
-  max-width: 38rem;
   padding-left:  0rem;
   padding-right: 0rem;
   margin-left:  auto;
   margin-right: auto;
+}
+
+.group {
+  max-width: 38rem;
 }
 
 
